2008-05-22  Oliver Hunt  <oliver@apple.com>

        RS=Maciej.

        Roll out r34020 as it causes recursion tests to fail.

        * kjs/object.cpp:
        (KJS::JSObject::call):

2008-05-22  Oliver Hunt  <oliver@apple.com>

        Reviewed by Mark.

        Don't leak the SymbolTable when compiling eval code.

        * kjs/nodes.cpp:
        (KJS::EvalNode::generateCode):

2008-05-22  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Oliver.

        Qt build fix.

        * JavaScriptCore.pri: Added DebuggerCallFrame to the build.
        * VM/LabelID.h: Include limits.h for UINT_MAX.
        * wtf/VectorTraits.h: Include memory for std::auto_ptr.

2008-05-22  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Adam Roben.
        
        Removed the old recursion guard mechanism, since squirrelfish has its
        own mechanism. Also removed some old JS call tracing code, since we
        have other ways to do that, too.
        
        SunSpider reports no change.

        * kjs/object.cpp:
        (KJS::JSObject::call):

2008-05-22  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Oliver.
        
        - fixed <rdar://problem/5954979> crash on celtic kane JS benchmark

        * kjs/nodes.cpp:
        (KJS::WithNode::emitCode):
        (KJS::TryNode::emitCode):

2008-05-21  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Maciej and Geoff.

        <rdar://problem/5951561> Turn on JavaScript Profiler
        -As part of the effort to turn on the profiler it would be helpful if it
        did not need ExecStates to represent the stack location of the currently
        executing statement.
        -We now create each node as necessary with a reference to the current
        node and each node knows its parent so that the tree can be made without
        the entire stack.

        * profiler/Profile.cpp:
        (KJS::Profile::Profile): The current node starts at the head.