@@ -196,6 +196,10 @@ void *fastRealloc(void* p, size_t n)
 
 } // namespace WTF
 
+extern "C" {
+void releaseFastMallocFreeMemory() { }
+}
+
 #if PLATFORM(DARWIN)
 // This symbol is present in the JavaScriptCore exports file even when FastMalloc is disabled.
 // It will never be used in this case, so it's type and value are less interesting than its presence.
@@ -3621,6 +3625,14 @@ FastMallocZone::FastMallocZone(TCMalloc_PageHeap* pageHeap, TCMalloc_ThreadCache
 void FastMallocZone::init()
 {
     static FastMallocZone zone(pageheap, &thread_heaps, static_cast<TCMalloc_Central_FreeListPadded*>(central_cache));
+}
+
+extern "C" {
+void releaseFastMallocFreeMemory()
+{
+    SpinLockHolder h(&pageheap_lock);
+    pageheap->ReleaseFreePages();
+}
 }
 
 #endif
